Thu Sep 26 17:54:33 1996  Barry Jaspan  <bjaspan@mit.edu>

	* admin_server.c (process_client): allow keytab to be specified on
 	command line; default is still wrong

Mon Sep 23 15:36:41 1996  Barry Jaspan  <bjaspan@mit.edu>

	* configure.in: add unit-test subdir

Wed Jul 31 17:53:45 1996  Tom Yu  <tlyu@mit.edu>

	* kadm_ser_wrap.c: Remove #include <sys/socket.h>, <netdb.h>
 		because k5-int.h already grabs it if NEED_SOCKETS is
 		defined.

	* admin_server.c: Remove #include <sys/socket.h> because k5-int.h
		already grabs it if NEED_SOCKETS is defined.

Thu Jul 18 19:46:49 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: removed ET_RULES, replaced with AC_PROG_AWK

Tue Jul  9 17:18:56 1996  Marc Horowitz  <marc@mit.edu>

	* kadm_stream.c: rename HAS_STDLIB_H to HAVE_STDLIB_H to conform
 	to the autoconf convention
	* configure.in: the old configure.in seemed to be written for some
 	other directory.  Now it's right.
	* admin_server.c, kadm_ser_wrap.c, kadm_server.c: renamed
 	<ovsec_admin/foo.h> to <kadm5/foo.h>
	* Makefile.in: complete rewrite.

Thu Mar 21 20:33:43 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: new principals were being created with two keys,
	one of which the key_data_ver=0 and had no valid data.

Tue Mar 19 19:42:37 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c:
		changed all references of des-cbc-md5 to des-cbc-crc
		fixed uninitialized variable
		set kvno modulo 256 in database

Wed Feb 21 23:34:31 1996  Richard Basch  <basch@lehman.com>

	* kadm_funcs.c: Initialize the length element of the krb5_db_entry
		structure in kadm_princ2entry (add_entry was failing).

Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kadm_funcs.c : Remove mkvno for krb5_db_entry

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * admin_server.c, kadm_funcs.c kadm_ser_wrap.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)
